Bug 464241 - KDE Connect crashed after clicking on Virtual Display button from KDE Connect applet
Summary: KDE Connect crashed after clicking on Virtual Display button from KDE Connect...
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: common (other bugs)
Version First Reported In: 22.12.1
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL:
Keywords: drkonqi
: 466009 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-01-13 14:43 UTC by zzrakic
Modified: 2023-02-18 16:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zzrakic 2023-01-13 14:43:34 UTC
Application: kdeconnectd (22.12.1)

Qt Version: 5.15.8
Frameworks Version: 5.101.0
Operating System: Linux 6.1.4-arch1-1 x86_64
Windowing System: Wayland
Distribution: "Arch Linux"
DrKonqi: 5.26.5 [KCrashBackend]

-- Information about the crash:
KDE Connect crashed after clicking on Virtual Display button from KDE Connect applet

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: KDE Connect Daemon (kdeconnectd), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = <optimized out>}
[KCrash Handler]
#6  QProcess::readChannel (this=0x0) at io/qprocess.cpp:1368
#7  0x00007f8381017bcb in QProcess::readAllStandardError (this=0x0) at io/qprocess.cpp:2043
#8  0x00007f834279a8c0 in operator() (exitStatus=<optimized out>, exitCode=<optimized out>, __closure=0x55cbe40e6290) at /usr/src/debug/kdeconnect/kdeconnect-kde-22.12.1/plugins/virtualmonitor/virtualmonitorplugin.cpp:125
#9  QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1>, QtPrivate::List<int, QProcess::ExitStatus>, void, VirtualMonitorPlugin::requestVirtualMonitor()::<lambda(int, QProcess::ExitStatus)> >::call (arg=<optimized out>, f=...) at /usr/include/qt/QtCore/qobjectdefs_impl.h:146
#10 QtPrivate::Functor<VirtualMonitorPlugin::requestVirtualMonitor()::<lambda(int, QProcess::ExitStatus)>, 2>::call<QtPrivate::List<int, QProcess::ExitStatus>, void> (arg=<optimized out>, f=...) at /usr/include/qt/QtCore/qobjectdefs_impl.h:256
#11 QtPrivate::QFunctorSlotObject<VirtualMonitorPlugin::requestVirtualMonitor()::<lambda(int, QProcess::ExitStatus)>, 2, QtPrivate::List<int, QProcess::ExitStatus>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=<optimized out>, this_=0x55cbe40e6280, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt/QtCore/qobjectdefs_impl.h:443
#12 0x00007f83810bda91 in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#13 doActivate<false> (sender=0x55cbe43ce7d0, signal_index=11, argv=0x7fff51b8ecb0) at kernel/qobject.cpp:3923
#14 0x00007f838101818d in QProcess::finished (this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>) at .moc/moc_qprocess.cpp:339
#15 0x00007f8381014992 in QProcessPrivate::_q_processDied (this=0x55cbe42d70c0) at io/qprocess.cpp:1184
#16 0x00007f8381018a1e in QProcess::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=0x7fff51b8ee30) at io/qprocess.h:320
#17 0x00007f83810bdc40 in doActivate<false> (sender=0x55cbe420c7d0, signal_index=3, argv=0x7fff51b8ee30) at kernel/qobject.cpp:3935
#18 0x00007f83810bf944 in QSocketNotifier::activated (this=this@entry=0x55cbe420c7d0, _t1=..., _t2=<optimized out>, _t3=...) at .moc/moc_qsocketnotifier.cpp:178
#19 0x00007f83810bfa88 in QSocketNotifier::event (this=0x55cbe420c7d0, e=<optimized out>) at kernel/qsocketnotifier.cpp:302
#20 0x00007f8381d78b5c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x55cbe420c7d0, e=0x7fff51b8ef50) at kernel/qapplication.cpp:3640
#21 0x00007f838108cf98 in QCoreApplication::notifyInternal2 (receiver=0x55cbe420c7d0, event=0x7fff51b8ef50) at kernel/qcoreapplication.cpp:1064
#22 0x00007f83810d6ae6 in socketNotifierSourceDispatch (source=0x55cbe3cef710) at kernel/qeventdispatcher_glib.cpp:107
#23 0x00007f837f91687b in g_main_dispatch (context=0x7f8374005010) at ../glib/glib/gmain.c:3454
#24 g_main_context_dispatch (context=0x7f8374005010) at ../glib/glib/gmain.c:4172
#25 0x00007f837f96dc89 in g_main_context_iterate.constprop.0 (context=0x7f8374005010, block=1, dispatch=1, self=<optimized out>) at ../glib/glib/gmain.c:4248
#26 0x00007f837f915132 in g_main_context_iteration (context=0x7f8374005010, may_block=1) at ../glib/glib/gmain.c:4313
#27 0x00007f83810d7caf in QEventDispatcherGlib::processEvents (this=0x55cbe3ca83d0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#28 0x00007f838108574c in QEventLoop::exec (this=0x7fff51b8f1d0, flags=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#29 0x00007f8381090269 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#30 0x00007f8381539fe2 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1870
#31 0x00007f8381d76f2a in QApplication::exec () at kernel/qapplication.cpp:2832
#32 0x000055cbe36a9597 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kdeconnect/kdeconnect-kde-22.12.1/daemon/kdeconnectd.cpp:185
[Inferior 1 (process 4701) detached]

Reported using DrKonqi
Comment 1 zzrakic 2023-01-13 14:48:36 UTC
Can confirm that this crash is reproducible. Happens each time I press on Virtual Display button.
Comment 2 Nicolas Fella 2023-01-20 13:42:15 UTC
Git commit b34a0a8f29dee6adb01325fb2c8e1f68a5d26bbc by Nicolas Fella.
Committed on 20/01/2023 at 12:28.
Pushed by nicolasfella into branch 'master'.

[plugins/virtualmonitor] Fix crash when krfb-virtualmonitor fails all retries

After enough retries we give up and delete the QProcess

However we later access it again to print its output

Move that before the deletion

M  +2    -1    plugins/virtualmonitor/virtualmonitorplugin.cpp

https://invent.kde.org/network/kdeconnect-kde/commit/b34a0a8f29dee6adb01325fb2c8e1f68a5d26bbc
Comment 3 Nicolas Fella 2023-01-20 14:33:32 UTC
Git commit 87686bf5be98671e0398d779af022b9445bef646 by Nicolas Fella.
Committed on 20/01/2023 at 14:33.
Pushed by nicolasfella into branch 'release/22.12'.

[plugins/virtualmonitor] Fix crash when krfb-virtualmonitor fails all retries

After enough retries we give up and delete the QProcess

However we later access it again to print its output

Move that before the deletion
(cherry picked from commit b34a0a8f29dee6adb01325fb2c8e1f68a5d26bbc)

M  +2    -1    plugins/virtualmonitor/virtualmonitorplugin.cpp

https://invent.kde.org/network/kdeconnect-kde/commit/87686bf5be98671e0398d779af022b9445bef646
Comment 4 Nicolas Fella 2023-02-18 16:36:54 UTC
*** Bug 466009 has been marked as a duplicate of this bug. ***