[plugins/virtualmonitor] Fix crash when krfb-virtualmonitor fails all retries

After enough retries we give up and delete the QProcess

However we later access it again to print its output

Move that before the deletion

BUG: 464241
(cherry picked from commit b34a0a8f29dee6adb01325fb2c8e1f68a5d26bbc)